--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <meta name="googlebot" content="index, follow">
 
-  <link rel="canonical" href="https://www.vrgroup-tuition.in/">
+  <link rel="canonical" href="https://vrgroup-tuition.netlify.app/">
 
   <meta property="og:title" content="V.R. GROUP TUITION | Best Tuition in Jivraj Park, Ahmedabad">
   <meta property="og:description"
     content="Expert tuition for Nursery to 12th Commerce students in Ahmedabad. Join now for top results in Maths, Accounts, and Sanskrit. Trusted by hundreds of students.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.vrgroup-tuition.in/">
-  <meta property="og:image" content="https://www.vrgroup-tuition.in/images/tuition-banner.jpg">
+  <meta property="og:url" content="https://vrgroup-tuition.netlify.app/">
+  <meta property="og:image" content="https://vrgroup-tuition.netlify.app/banner.jpeg">
   <meta property="og:site_name" content="V.R. GROUP TUITION">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="V.R. GROUP TUITION | Best Tuition in Jivraj Park, Ahmedabad">
   <meta name="twitter:description"
     content="Achieve 90%+ results with expert coaching from Nursery to 12th Commerce. Join V.R. GROUP TUITION today!">
-  <meta name="twitter:image" content="https://www.vrgroup-tuition.in/images/tuition-banner.jpg">
+  <meta name="twitter:image" content="https://vrgroup-tuition.netlify.app/images/banner.jpeg">
   <meta name="distribution" content="global">
   <meta name="rating" content="general">
   <meta name="language" content="English">
@@ -40,8 +40,8 @@
   "@context": "https://schema.org",
   "@type": "EducationalOrganization",
   "name": "V.R. GROUP TUITION",
-  "url": "https://www.vrgroup-tuition.in/",
-  "logo": "https://www.vrgroup-tuition.in/images/logo.png",
+  "url": "https://vrgroup-tuition.netlify.app/",
+  "logo": "https://vrgroup-tuition.netlify.app/logo.jpeg",
   "description": "Trusted tuition in Jivraj Park, Ahmedabad. Coaching from Nursery to 12th Commerce. High success rate in Maths, Accounts, Sanskrit.",
   "address": {
     "@type": "PostalAddress",
@@ -52,7 +52,7 @@
   },
   "contactPoint": {
     "@type": "ContactPoint",
-    "telephone": "+91-XXXXXXXXXX",
+    "telephone": "+91-8758535116",
     "contactType": "Customer Service"
   }
 }
