--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="googlebot" content="index, follow">
 
   <link rel="canonical" href="https://vrgroup-tuition.netlify.app/">
-
+  <link rel="shortcut icon" href="logo.jpeg" type="image/x-icon">
   <meta property="og:title" content="V.R. GROUP TUITION | Best Tuition in Jivraj Park, Ahmedabad">
   <meta property="og:description"
     content="Expert tuition for Nursery to 12th Commerce students in Ahmedabad. Join now for top results in Maths, Accounts, and Sanskrit. Trusted by hundreds of students.">
