--- a/index.html
+++ b/index.html
@@ -1672,7 +1672,9 @@
 
 
       <div class="text-center mt-4" style="font-size: 0.9rem; color: #bbb;">
-        Designed by <a href="https://multimosaic.onrender.com/" class="footer-link">MultiMosaic</a> &copy; 2025
+        Designed by <a href="https://wa.me/9265409344?text=I%20want%20a%20website%20for%20my%20business"
+          class="footer-link" target="_blank"
+          style="color: #25d366; text-decoration: none; font-weight: bold;">MultiMosaic</a> &copy; 2025
       </div>
 
     </div>
