--- a/index.html
+++ b/index.html
@@ -1665,7 +1665,7 @@
           <a href="https://www.instagram.com/v.r.group_tuition/" class="social-icon me-3"><i
               class="bi bi-instagram"></i></a>
           <a href="https://wa.me/918758535116?text=Hello%20V.R.%20Group%20Tuition%2C%20I%20am%20interested%20in%20your%20classes."
-            class="social-icon me-3"><i class="bi bi-whatsapp"></i></a>
+            class="social-icon "><i class="bi bi-whatsapp"></i></a>
         </div>
 
       </div>
